tests/snapshots/tests__command__subcommand_required.snap
---
source: tests/tests.rs
expression: "super::run(spec, args)"
---
command cat <<'EOF_cba21254'
[1m[31merror:[0m '[33mmyprog[0m' requires a subcommand but one was not provided
  [subcommands: [32mtest[0m, [32mhelp[0m]

[1m[4mUsage:[0m [1mmyprog[0m <COMMAND>

For more information, try '[1m--help[0m'.
EOF_cba21254
exit 1
