tests/snapshots/tests__command__visible_long_flag_aliases.snap
---
source: tests/tests.rs
expression: "super::run(spec, args)"
---
claptrap__subcommand='test'
claptrap_test_input='file.txt'
